add examples for opens usage(reflection)